--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "axios": "^1.10.0",
+    "formidable": "^3.5.4",
+    "mailparser": "^3.7.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
@@ -43,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/formidable": "^3.4.5",
+    "@types/mailparser": "^3.4.6",
+    "@vercel/node": "^5.3.0"
   }
 }
