--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "axios": "^1.10.0",
+    "cheerio": "^1.0.0-rc.12",
     "formidable": "^3.5.1",
     "mailparser": "^3.7.1",
     "react": "^19.1.0",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
     "@types/formidable": "^3.4.5",
     "@types/mailparser": "^3.4.4",
     "@vercel/node": "^3.2.0"
