--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
+    "isolatedModules": false,
+    "noEmit": false,
+    "outDir": "dist",
     "jsx": "react-jsx"
   },
   "include": [
