--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
@@ -16,14 +16,12 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": false,
-    "noEmit": false,
-    "outDir": "dist",
+    "isolatedModules": true,
+    "noEmit": true,
     "jsx": "react-jsx"
   },
   "include": [
     "src",
     "api"
-  ],
-  "exclude": ["node_modules"]
+  ]
 }
