--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "cheerio": "^1.0.0-rc.12",
     "formidable": "^3.5.1",
+    "he": "^1.2.0",
     "mailparser": "^3.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
     "@types/formidable": "^3.4.5",
+    "@types/he": "^1.2.3",
     "@types/mailparser": "^3.4.4",
     "@vercel/node": "^3.2.0"
   }
