--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^19.1.6",
     "axios": "^1.10.0",
     "cheerio": "^1.0.0-rc.12",
+    "dompurify": "^3.2.6",
     "formidable": "^3.5.1",
     "he": "^1.2.0",
     "mailparser": "^3.7.1",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
+    "@types/dompurify": "^3.0.5",
     "@types/formidable": "^3.4.5",
     "@types/he": "^1.2.3",
     "@types/mailparser": "^3.4.4",
