🔄 Change cron job to run once per day for Vercel Hobby plan compliance

--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
   "crons": [
     {
       "path": "/api/refresh-feeds",
-      "schedule": "0 * * * *"
+      "schedule": "0 0 * * *"
     }
   ]
 }
